--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -82,7 +82,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: stable
-          flutter-version: pubspec.yaml
+          flutter-version: 3.24.3
           cache: true
       - run: dart --version
         shell: bash
